--- a/css/style.css
+++ b/css/style.css
@@ -1,93 +1,226 @@
-#menu {
-	background: #0099CC;
-	color: #FFF;
-	height: 45px;
-	padding-left: 18px;
-	border-radius: 10px;
+:root {
+    --font-family: 'Poppins', sans-serif;
+    --normal-font: 400;
+    --bold-font: 700;
+    --bolder-font: 900;
+    --bg-color: #fcfcfc;
+    --primary-color: #AED6F1;
+    --secondary-color: #ff7235;
+    --primary-shadow: #8b8eaf;
+    --secondary-shadow: #a17a69;
+    --bottom-margin: 0.5rem;
+    --bottom-margin-2: 1rem;
+    --line-height: 1.7rem;
+    --transition: 0.3s;
 }
-#menu ul, #menu li {
-	margin: 0 auto;
-	padding: 0;
-	list-style: none
+
+html {
+    scroll-behavior: smooth;
 }
-#menu ul {
-	width: 100%;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
-#menu li {
-	float: left;
-	display: inline;
-	position: relative;
+
+ul {
+    list-style-type: none;
 }
-#menu a {
-	display: block;
-	line-height: 45px;
-	padding: 0 14px;
-	text-decoration: none;
-	color: #FFFFFF;
-	font-size: 16px;
+
+a {
+    text-decoration: none;
+    color: var(--primary-color);
 }
-#menu a.dropdown-arrow:after {
-	content: "\25BE";
-	margin-left: 5px;
+
+a:hover {
+    color: var(--secondary-color);
 }
-#menu li a:hover {
-	color: #0099CC;
-	background: #F2F2F2;
+
+body {
+    font-family: var(--font-family);
 }
-#menu input {
-	display: none;
-	margin: 0;
-	padding: 0;
-	height: 45px;
-	width: 100%;
-	opacity: 0;
-	cursor: pointer
+
+/* Barra de navegación */
+
+nav {
+    position: sticky;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 1.5rem 3.5rem;
+    background-color: var(--bg-color);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+    color: #3498DB;
 }
-#menu label {
-	display: none;
-	line-height: 45px;
-	text-align: center;
-	position: absolute;
-	left: 35px
+
+nav h1 {
+    color: var(--color-primario);
+	font-size: 2rem;
 }
-#menu label:before {
-	font-size: 1.6em;
-	content: "\2261"; 
-	margin-left: 20px;
+
+nav img {
+	height: 2rem;
+    width: 4rem;
 }
-#menu ul.sub-menus{
-	height: auto;
-	overflow: hidden;
-	width: 170px;
-	background: #444444;
-	position: absolute;
-	z-index: 99;
-	display: none;
+
+nav a {
+    color: var(--color-primario);
+    transition: var(--transicion);
 }
-#menu ul.sub-menus li {
-	display: block;
-	width: 100%;
+
+nav a:hover {
+    color: var(--valor-secundario);
+    border-bottom: 2px solid var(--valor-secundario);
 }
-#menu ul.sub-menus a {
-	color: #FFFFFF;
-	font-size: 16px;
+
+nav ul {
+    display: flex;
+    gap: 1.9rem;
 }
-#menu li:hover ul.sub-menus {
-	display: block
+
+nav ul li {
+    font-weight: var(--negrita);
 }
-#menu ul.sub-menus a:hover{
-	background: #F2F2F2;
-	color: #444444;
+
+.menu-hamburguesa {
+    color: var(--primary-color);
+    font-size: 2rem;
+    border: 0;
+    background-color: transparent;
+    cursor: pointer;
+    display: none;
 }
-@media screen and (max-width: 800px){
-	#menu {position:relative}
-	#menu ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
-	#menu ul.sub-menus {width:100%;position:static;}
-	#menu ul.sub-menus a {padding-left:30px;}
-	#menu li {display:block;float:none;width:auto;}
-	#menu input, #menu label {position:absolute;top:0;left:0;display:block}
-	#menu input {z-index:4}
-	#menu input:checked + label {color:white}
-	#menu input:checked + label:before {content:"\00d7"}
-	#menu input:checked ~ ul {display:block}
+
+/* Sobre nosotros */
+
+.hero {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2.5rem;
+    max-width: 55.75rem;
+    margin: auto;
+}
+
+.hero img {
+    height: 20.5rem;
+    width: 30.5rem;
+}
+
+.bio {
+    width: 25rem;
+    padding: 0.625rem;
+    border-radius: 6px;
+    box-shadow: 0px 2px 15px 2px var(--primary-shadow);
+}
+
+.bio h2 {
+    margin-bottom: var(--bottom-margin);
+}
+
+.bio p {
+    line-height: var(--line-height);
+    padding: 0.3rem 0;
+}
+
+/* Mas sobre nosotros */
+
+.mas-sobre {
+    background-color: var(--primary-color);
+    padding: 1rem 15rem;
+}
+
+.mas-sobre h2 {
+    margin-bottom: var(--bottom-margin);
+    text-align: center;
+}
+
+.mas-sobre p {
+    line-height: var(--line-height);
+    padding: 0.4rem;
+}
+
+/* Footer */
+
+footer {
+    background-color: var(--bg-color);
+    padding: 1.25rem;
+    text-align: center;
+    margin: 2rem 0 0;
+}
+
+/* Responsive */
+@media screen and (max-width: 720px) {
+    nav {
+        padding: 1.5rem 1rem;
+    }
+
+    nav ul {
+        position: fixed;
+        background-color: var(--bg-color);
+        flex-direction: column;
+        top: 86px;
+        left: 10%;
+        width: 80%;
+        text-align: center;
+        transform: translateX(120%);
+        transition: transform 0.5s ease-in;
+    }
+
+    nav ul li {
+        margin: 8px;
+    }
+
+    .burger-menu {
+        display: block;
+    }
+
+    nav ul.show {
+        transform: translateX(0);
+    }
+
+    .hero {
+        margin-top: -0.1rem;
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .hero img {
+        height: 25.5rem;
+        width: 30rem;
+    }
+
+    .bio {
+        margin-top: -0.1rem;
+        width: 20.5rem;
+    }
+
+    .mas-sobre {
+        margin-top: 2rem;
+        padding: 1rem 3.5rem;
+    }
+
+    .mas-sobre h2 {
+        text-align: center;
+    }
+
+    .mas-sobre p {
+        text-align: justify;
+    }
+
+}
+
+@media screen and (max-width: 420px) {
+    .hero img {
+        height: 20.5rem;
+        width: 23rem;
+    }
+
+    .bio {
+        width: 18.3rem;
+    }
 }
