--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,19 @@ a:hover {
 body {
     font-family: var(--font-family);
 }
+button {
+    font-size: 2.2;
+    font-weight: bold;
+    padding: 10px 30px;
+    border-radius: 15;
+    border: 2px solid rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
+    color: white;
+    background-color: #fc73b8;
+}
+button:hover {
+    background-color:hsl(330, 68%, 62%);
+}
 
 /* Barra de navegación */
 
@@ -144,16 +157,36 @@ nav ul li {
     padding: 0.4rem;
 }
 
+/* Servicios */
+.servicios { 
+    background-color: var(--primary-color);
+    padding: 1rem 15rem;
+}
+
+
+.servicios h3 {
+    margin-bottom: var(--bottom-margin);
+    text-align: center;
+}
+   
+
+.servicios p {
+    line-height: var(--line-height);
+    padding: 0.4rem;   
+}
+
 /* Footer */
 
 footer {
-    background-color: var(--bg-color);
-    padding: 1.25rem;
-    text-align: center;
-    margin: 2rem 0 0;
+    background-color: hsl(135, 100%, 94%) ;
+    
+   display: flex;
+   flex-direction: column;
+   align-self: start;
 }
 
 /* Responsive */
+
 @media screen and (max-width: 720px) {
     nav {
         padding: 1.5rem 1rem;
@@ -210,6 +243,19 @@ footer {
 
     .mas-sobre p {
         text-align: justify;
+    }
+
+    .servicios {
+        margin-top: 2rem;
+        padding: 1rem 3.5rem;   
+    }
+
+    .servicios h3 {
+        text-align: center; 
+    }
+
+    .servicios p {
+        text-align: justify;    
     }
 
 }
