--- a/css/style.css
+++ b/css/style.css
@@ -174,6 +174,61 @@ nav ul li {
     line-height: var(--line-height);
     padding: 0.4rem;   
 }
+/*Productos*/
+
+.productos { 
+    background-color: var(--primary-color);
+    padding: 1rem 15rem;
+}
+
+.productos h2 {
+    text-align: center;
+    margin-top: 50px;
+    font-size: 2rem;
+
+}
+
+.productos h3 
+{text-align: center;
+margin-top: 50px;
+font-size: 2rem;}
+
+.slider-frame {
+    width: 250px;
+    height: auto;
+    margin: 50px auto 0;
+    animation: 16s infinite alternate ease-in-out;
+}
+.slider-frame ul {
+    display: flex;
+    padding: 0;
+    width: 400%;
+}
+.slider-frame li {
+    list-style: none;
+    width: 100%;
+}
+.slider-frame img {
+    width: 100%;
+
+}
+
+@keyframes slide {
+    0% {margin-left: 0%;}
+    20% {margin-left: 0%;}
+
+    25% {margin-left: -100%;}
+    45% {margin-left: -100%;}
+
+    50% {margin-left: -200%;}
+    70% {margin-left: -200%;}
+
+    75% {margin-left: -300%;}
+    95% {margin-left: -300%;}
+}
+
+
+
 
 /* Footer */
 
